Basic Book functionality in API
* fix: pnpm (#6)

* fix: pnpm

* fix: remove pnpm caching

* fix: refer to the right lock file

* fix: typo in pnpm

---------

Co-authored-by: Bas Broerse <basbroerse@hotmail.com>

* feat: containerize + book entity in BE (#7)

Co-authored-by: Bas Broerse <bas.broerse@kpn.com>

* feat: add param validation

* feat: improve error messages

* feat: added unit tests

* feat: remove test from build step and comment integration tests

* feat: extend unit tests and introduce integration test using TestContainers

* feat: also run integration tests in github actions

* feat: setup linting and code analysis

* feat: setup linting and code analysis

* feat: setup linting and code analysis

* fix: add sonar.java.binaries

* fix: add sonar.java.binaries

* fix: build backend and then lint

* fix: sonar.java.binaries

---------

Co-authored-by: Bas Broerse <bas.broerse@kpn.com>